force-app/main/default/objects/cgcloud__Job_Definition_List__c/cgcloud__Job_Definition_List__c.object-meta.xml
<CustomObject>
    <description>Holds the set of questions/surveys that are to be carried out in the respective call and contains further relevant configurations.</description>
    <label>Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>