force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Activity_Question_Score__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Activity_Question_Score__c</fullName>
    <description>Sum of scores of all the questions in activity.</description>
    <label>Activity Question Score</label>
    <summarizedField>cgcloud__Job_DL_Job_Definition_Template__c.cgcloud__Score__c</summarizedField>
    <summaryForeignKey>cgcloud__Job_DL_Job_Definition_Template__c.cgcloud__Job_Definition_List__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>