force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Activity_Score__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Activity_Score__c</fullName>
    <description>Activity Score to be considered for activity performance evaluation on mobility.</description>
    <inlineHelpText>Score on which activity performance will be evaluated on mobility.</inlineHelpText>
    <label>Activity Score (100%)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>