force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Approval_State__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Approval_State__c</fullName>
    <label>Approval State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Relevant</fullName>
                <default>true</default>
                <label>Not Relevant</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>