force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Consider_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Account__c</fullName>
    <formula>cgcloud__Job_Definition_List_Template__r.cgcloud__Consider_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Customer</label>
    <type>Checkbox</type>
</CustomField>