force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Consider_Listing__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Listing</label>
    <type>Checkbox</type>
</CustomField>