force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Consider_Score__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Score__c</fullName>
    <description>Describes whether the activity is score relevant or not.</description>
    <label>Consider Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>