force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Field_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Sales_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Sales Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Field_Sales_Activity__c.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Field_Sales_Activity__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Job_Definition_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>