force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Job_Definition_List_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_List_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Activity Template</label>
    <referenceTo>cgcloud__Job_Definition_List_Template__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Job_Definition_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>