force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Mark_for_Deletion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mark_for_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark For Deletion</label>
    <type>Checkbox</type>
</CustomField>