force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Restrict_Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Restrict_Org_Unit__c</fullName>
    <label>Restrict Org Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>