force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Standard_Jobs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Standard_Jobs__c</fullName>
    <formula>cgcloud__Job_Definition_List_Template__r.cgcloud__Standard_Jobs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Jobs</label>
    <type>Checkbox</type>
</CustomField>