force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Threshold_Partially_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Threshold_Partially_Fulfilled__c</fullName>
    <description>Defines the lower threshold limit for the activity score.</description>
    <label>Threshold Partially Fulfilled &gt; (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>