force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>