force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <inlineHelpText>Updated based on activity template and valid from value.</inlineHelpText>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>