force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Visit_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Visit Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Visit_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Visit_Template__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Visit_Template__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Job_Definition_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>