force-app/main/default/objects/cgcloud__Job_Definition_List__c/fields/cgcloud__Visit_Template_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Template_Description__c</fullName>
    <formula>cgcloud__Visit_Template__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Template Description</label>
    <type>Text</type>
</CustomField>