force-app/main/default/objects/cgcloud__Job_Definition_List__c/recordTypes/cgcloud__FSA_JDL.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__FSA_JDL</fullName>
    <active>true</active>
    <description>JDL which is related to FSA</description>
    <label>FSA JDL</label>
</RecordType>