force-app/main/default/objects/cgcloud__Job_Definition_List__c/recordTypes/cgcloud__JDL.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__JDL</fullName>
    <active>true</active>
    <description>JDL which is NOT related to FSA</description>
    <label>JDL</label>
</RecordType>