force-app/main/default/objects/cgcloud__Job_Definition_List__c/validationRules/cgcloud__Active_And_Mark_for_Deletion.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Active_And_Mark_for_Deletion</fullName>
    <active>true</active>
    <description>Mark for Deletion and Active can&apos;t be checked at the same time.</description>
    <errorConditionFormula>AND(cgcloud__Active__c,cgcloud__Mark_for_Deletion__c)</errorConditionFormula>
    <errorMessage>Mark for Deletion and Active can&apos;t be checked at the same time.</errorMessage>
</ValidationRule>