force-app/main/default/objects/cgcloud__Job_Definition_List__c/validationRules/cgcloud__Date_From_Has_To_Be_Before_Date_To.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Date_From_Has_To_Be_Before_Date_To</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Valid_From__c &gt; cgcloud__Valid_Thru__c</errorConditionFormula>
    <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
</ValidationRule>