force-app/main/default/objects/cgcloud__Job_Definition_List__c/validationRules/cgcloud__JDL_Time_Frame_FSA_Time_Frame.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__JDL_Time_Frame_FSA_Time_Frame</fullName>
    <active>true</active>
    <description>The Activity time frame must be within the Field Sales Activity time frame.</description>
    <errorConditionFormula>NOT(ISBLANK(cgcloud__Field_Sales_Activity__c)) &amp;&amp; (cgcloud__Valid_From__c &lt; cgcloud__Field_Sales_Activity__r.cgcloud__Valid_From__c || cgcloud__Valid_Thru__c &gt; cgcloud__Field_Sales_Activity__r.cgcloud__Valid_Thru__c)</errorConditionFormula>
    <errorMessage>The Activity time frame must be within the Field Sales Activity time frame.</errorMessage>
</ValidationRule>