force-app/main/default/objects/cgcloud__Job_Definition_List__c/validationRules/cgcloud__Only_Sellable_Promotions_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Only_Sellable_Promotions_Allowed</fullName>
    <active>true</active>
    <description>Only sellable promotions can be assigned to activity.</description>
    <errorConditionFormula>AND(cgcloud__Promotion__r.Id != NULL, cgcloud__Promotion__r.RecordType.DeveloperName != &apos;SellablePromotion&apos;)</errorConditionFormula>
    <errorMessage>Only promotions with &apos;Sellable&apos; Promotion Template can be selected.</errorMessage>
</ValidationRule>