force-app/main/default/objects/cgcloud__Job_Definition_List__c/validationRules/cgcloud__Prevent_Changing_of_JDLTemplate_referenc.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prevent_Changing_of_JDLTemplate_referenc</fullName>
    <active>true</active>
    <errorConditionFormula>NOT ISNEW()  &amp;&amp;  ISCHANGED(cgcloud__Job_Definition_List_Template__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Job_Definition_List_Template__c</errorDisplayField>
    <errorMessage>The Activity Template can&apos;t be edited after Activity creation.</errorMessage>
</ValidationRule>