force-app/main/default/objects/cgcloud__Job_Definition_List__c/validationRules/cgcloud__Sales_Org_should_be_same_as_template.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_as_template</fullName>
    <active>true</active>
    <description>The Activity and Activity Template must have the same Sales Org.</description>
    <errorConditionFormula>TEXT( cgcloud__Sales_Org__c ) != TEXT( cgcloud__Job_Definition_List_Template__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Activity and Activity Template must have the same Sales Org.</errorMessage>
</ValidationRule>