force-app/main/default/objects/cgcloud__Job_Definition_List__c/validationRules/cgcloud__Sales_Org_should_be_same_for_all_lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_all_lookups</fullName>
    <active>true</active>
    <description>The Visit Template and Job Definition List must have the same Sales Org.</description>
    <errorConditionFormula>AND (cgcloud__Field_Sales_Activity__r.Id = null, (TEXT( cgcloud__Visit_Template__r.cgcloud__Sales_Org__c ) &lt;&gt; TEXT( cgcloud__Sales_Org__c )))</errorConditionFormula>
    <errorMessage>The Visit Template and Activity must have the same Sales Org.</errorMessage>
</ValidationRule>