force-app/main/default/objects/cgcloud__Job_Definition_List__c/validationRules/cgcloud__Sales_Org_should_be_same_for_lookup_fsa.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_lookup_fsa</fullName>
    <active>true</active>
    <description>The Visit Template, Job Definition List and Field Sales Activity must have the same Sales Org.</description>
    <errorConditionFormula>AND( cgcloud__Field_Sales_Activity__r.Id  &lt;&gt; null , (
          TEXT( cgcloud__Field_Sales_Activity__r.cgcloud__Sales_Org__c )  &lt;&gt;
          TEXT( cgcloud__Visit_Template__r.cgcloud__Sales_Org__c )
          ||
          TEXT( cgcloud__Field_Sales_Activity__r.cgcloud__Sales_Org__c ) &lt;&gt;
          TEXT( cgcloud__Sales_Org__c )))</errorConditionFormula>
    <errorMessage>The Visit Template, Activity and Field Sales Activity must have the same Sales Org.</errorMessage>
</ValidationRule>