force-app/main/default/objects/cgcloud__Job_Definition_List__c/validationRules/cgcloud__Sales_Org_should_be_same_for_promotion.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_promotion</fullName>
    <active>true</active>
    <description>The Promotion and the Activity must have the same Sales Org.</description>
    <errorConditionFormula>AND( cgcloud__Promotion__r.Id != null, cgcloud__Promotion__r.cgcloud__Sales_Org__c != TEXT( cgcloud__Sales_Org__c ))</errorConditionFormula>
    <errorMessage>The Promotion and the Activity must have the same Sales Org.</errorMessage>
</ValidationRule>