force-app/main/default/objects/cgcloud__Job_Definition_List__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Active__c</columns>
    <columns>cgcloud__Job_Definition_List_Template__c</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Consider_Account__c</columns>
    <columns>cgcloud__Visit_Template__c</columns>
    <columns>cgcloud__Valid_From__c</columns>
    <columns>cgcloud__Valid_Thru__c</columns>
    <columns>cgcloud__Field_Sales_Activity__c</columns>
    <columns>cgcloud__Approval_State__c</columns>
    <columns>cgcloud__Promotion__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>cgcloud__Consider_Listing__c</columns>
    <columns>cgcloud__Consider_Products__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>